--- a/packages/client/src/public/component-css/gamelist.css
+++ b/packages/client/src/public/component-css/gamelist.css
@@ -59,12 +59,12 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
+        align-items: center;
         flex: 1;
         width: 100%;
         position: relative;
         background-color: var(--bg-0);
         text-align: center;
-        margin-top: 0.5rem;
     }
 }
 
