--- a/packages/client/src/public/root.css
+++ b/packages/client/src/public/root.css
@@ -122,6 +122,7 @@ input[type='password'] {
 .rawg-attribution {
     font-size: 0.75rem;
     font-weight: 300;
+    line-height: 1;
     text-align: center;
     padding: 0.5rem 1rem 1rem;
 }
